@@ -13,6 +13,9 @@
  *
  **********************************************************************
  * $Log$
+ * Revision 1.1.2.1  2005/05/23 18:41:51  strk
+ * Replaced sprintf uses with ostringstream
+ *
  * Revision 1.1  2004/07/08 19:41:27  strk
  * renamed to reflect JTS API.
  *
@@ -29,7 +32,7 @@
 
 
 #include "CustomCoordinateSequenceExample.h"
-#include <stdio.h>
+#include <sstream>
 
 using namespace geos;
 
@@ -135,14 +138,17 @@ void CustomPointCoordinateSequence::deleteAt(int pos){
 }
 
 string CustomPointCoordinateSequence::toString() {
-	string result("");
-	char buffer[100];
+	ostringstream s;
+	//string result("");
+	//char buffer[100];
 	for (int i=0;i<size;i++) {
 		point_3d c=pts[i];
-		sprintf(buffer,"(%g,%g,%g) ",c.x,c.y,c.z);
-		result.append(buffer);
+		//sprintf(buffer,"(%g,%g,%g) ",c.x,c.y,c.z);
+		s<<"("<<c.x<<","<<c.y<<","<<c.z<<") ";
+		//result.append(buffer);
 	}
-	result.append("");
-	return result;
+	//result.append("");
+	//return result;
+	return s.str();
 }
 
