@@ -7,7 +7,8 @@ Changes from 2.1.1 to 2.1.2
 - Ported JTS robustness patch for RobustLineIntersector
 - Removed useless Coordinate copies in OverlayOp::mergeZ() 
 - Avoided throws by IsValid on invalid input
-- Stricter C++ syntax (math.h=>cmath, ieeefp.h in "C" block)
+- Stricter C++ syntax (math.h=>cmath, ieeefp.h in "C" block, ostringstream
+  instead of sprintf)
 - Better support for older compilers (Polygonizer::LineStringAdder friendship)
 - Removed useless Coordinate copies in CGAlgorithms::isOnLine() 
 - Added support for polygonize and parametrized buffer tests in XMLTester
